package vostok;
import "google/protobuf/any.proto";

syntax = "proto3";

//
//  Network level
//

message TopMessage {
    oneof body {
        MessagesContainer messagesContainer = 1;
        Message message = 2;
        AckMessages ackMessages = 3;
        Ping ping = 4;
        Pong pong = 5;
        MessagesInfoRequest messagesInfoRequest = 6;
        ResendMessageAnswerRequest resendMessageAnswerRequest = 7;
        MessageNotFoundResponse messageNotFoundResponse = 8;
        MessageIsProcessingResponse messageIsProcessingResponse = 9;
        InvalidMessage invalidMessage = 10;
    }
}

message Message {
    required uint32 id = 1;
    repeated uint32 ackMessages = 2;
    required google.protobuf.Any body = 3;
}

message MessagesContainer {
    repeated TopMessage messages = 1;
}

message AckMessages {
    repeated uint32 ids = 1;
}

message MessagesInfoRequest {
    repeated uint32 messageIds = 1;
}

message ResendMessageAnswerRequest {
    required uint32 messageId = 1;
}

message MessageNotFoundResponse {
    required uint32 messageId = 1;
}

message MessageIsProcessingResponse {
    required uint32 messageId = 1;
}

message Initialize {
    optional string authToken = 1;
    optional string sessionId = 2;
}

message InitializeAck {
    required string sessionId = 2;
}

message InvalidMessage {

}

message Ping {
    required uint32 id = 1;
}

message Pong {
    required uint32 id = 1;
}

message SessionExpired {

}